--- a/pages/pdv.html
+++ b/pages/pdv.html
@@ -139,6 +139,15 @@
                     </td>
                 </tr>
             </tbody>
+            <tfoot>
+                <tr class="font-semibold text-gray-900 dark:text-white">
+                    <th scope="row" class="px-6 py-3 text-base">Total</th>
+                    <td></td>
+                    <td id="totalQuantidade" class="px-6 py-3"></td>
+                    <td></td>
+                    <td id="totalGeral" class="px-6 py-3"></td>
+                </tr>
+            </tfoot>
         </table>
     </div>
 </body>
